2009-12-14 Felix Zielcke <fzielcke@z-51.de>

	Fix a segfault with parsing unknown long options.

	* util/grub-mkrelpath.c (options): Zero terminate it.

2009-12-13  Carles Pina i Estany  <carles@pina.cat>

	* include/grub/misc.h (grub_puts): New declaration.
	(grub_puts_): Likewise.
	* kern/mis.c (grub_puts): New definition.
	(grub_puts_): Likewise.

2009-12-13  Robert Millan  <rmh.grub@aybabtu.com>

	* util/grub-probe.c (probe): Improve error message.

2009-12-13  Robert Millan  <rmh.grub@aybabtu.com>

	* loader/i386/multiboot_elfxx.c
	(CONCAT(grub_multiboot_load_elf, XX)): Fix `grub_multiboot_payload_eip'
	initialization.

2009-12-13  Vladimir Serbinenko  <phcoder@gmail.com>

	Relocator framework

	* loader/i386/xnu_helper.S: Removed. All users updated.
	* conf/i386.rmk (pkglib_MODULES): Add relocator.mod.
	(relocator_mod_SOURCES): New variable.
	(relocator_mod_CFLAGS): Likewise.
	(relocator_mod_LDFLAGS): Likewise.
	(relocator_mod_ASFLAGS): Likewise.
	* conf/x86_64.rmk: Likewise.
	* include/grub/i386/multiboot.h (grub_multiboot_payload_orig): Removed.
	(grub_multiboot_payload_entry_offset): Likewise.
	(grub_multiboot_forward_relocator): Likewise.
	(grub_multiboot_forward_relocator_end): Likewise.
	(grub_multiboot_backward_relocator): Likewise.
	(grub_multiboot_backward_relocator_end): Likewise.
	(grub_multiboot_payload_eip): New variable.
	(grub_multiboot_payload_orig): Likewise.
	* include/grub/i386/pc/memory.h: Include grub/i386/memory.h.
	(GRUB_MEMORY_MACHINE_CR0_PE_ON): Move from here ...
	* include/grub/i386/memory.h
	(GRUB_MEMORY_CPU_CR0_PE_ON): ... to here
	(GRUB_MEMORY_CPU_CR4_PAE_ON): New definition.
	(GRUB_MEMORY_CPU_CR0_PAGING_ON): Likewise.
	(GRUB_MEMORY_CPU_AMD64_MSR): Likewise.
	(GRUB_MEMORY_CPU_AMD64_MSR_ON): Likewise.
	* include/grub/i386/relocator.h: New file.
	* include/grub/x86_64/relocator.h: Likewise.
	* include/grub/i386/xnu.h: Include grub/cpu/relocator.h.
	(XNU_RELOCATOR): New macro.
	(grub_xnu_launcher_start): Remove.